--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ st_annotated_text==4.0.0
 streamlit==1.19.0
 streamlit_chat==0.0.2.2
 streamlit_folium==0.11.1
-#pyproject-toml
+pyproject-toml
 pipwin
 PyAudio
